// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersVoted should render the UsersVoted component 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        {
          "uri": "test",
        }
      }
      style={
        [
          {
            "borderRadius": 50,
            "height": 15,
            "marginHorizontal": -3,
            "width": 15,
          },
          {
            "zIndex": 4,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`UsersVoted should render the UsersVoted component with multiple users 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        {
          "uri": "test",
        }
      }
      style={
        [
          {
            "borderRadius": 50,
            "height": 15,
            "marginHorizontal": -3,
            "width": 15,
          },
          {
            "zIndex": 4,
          },
        ]
      }
    />
    <Image
      source={
        {
          "uri": "test",
        }
      }
      style={
        [
          {
            "borderRadius": 50,
            "height": 15,
            "marginHorizontal": -3,
            "width": 15,
          },
          {
            "zIndex": 2,
          },
        ]
      }
    />
  </View>
</View>
`;
